--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>VocalStream Player</title>
+    <title>Kid Lesson - Job</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Updated FontAwesome to 6.6.0 for better reliability -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
